--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
 with:
 version: 12
 
-        - name: GitHub Action for Yarn
-          uses: Borales/actions-yarn@v2.1.0
+-name: gith for yarn
+        uses: Borales/actions-yarn@v2.1.0
           with:
             # Yarn command
             cmd: install
