--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ with:
 version: 12
 
 -name: gith for yarn
-uses: Bolares/actions-yarn@2.1.0
-          with:
-            # Yarn command
-            cmd: install
+uses: Bolares/actions_yarn@2.1.0
+            
+with:
+           # Yarn command
+       cmd: install
             
           -name: creating build
            uses: yarn build
