--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ with:
    cmd: install
    
     - name: Creating build
-     run: Yarn build
+      run: yarn build
            
        - name: installing surge
        uses: npm install -g surge
