--- a/.github/workflows/expensemain.yml
+++ b/.github/workflows/expensemain.yml
@@ -22,22 +22,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup Node environment
     uses: actions/setup-node@v2-beta
-with:
-version: 12
-
-- name: gith for yarn
-   uses: Bolares/actions_yarn@2.1.0
- 
-with:
-           # Yarn command
-     cmd: install
-   
-    - name: Creating
-        run: yarn build
-           
-       - name: installing surge
-       uses: npm install -g surge
-           
+    with:
+    node-version: 12
+    -uses: borales/actions-yarn@v2.0.0
+     with: 
+       cam: install
+       
+   - name: Install Surge
+     run: npm install --global surge
+          
        - name: deploying on surge
             uses:surge ./build http://expensetracker-by-atta.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
             
