--- a/.github/workflows/expensemain.yml
+++ b/.github/workflows/expensemain.yml
@@ -21,16 +21,16 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     - name: Setup Node environment
-    uses: actions/setup-node@v2-beta
-    with:
-    node-version: 12
+      uses: actions/setup-node@v2-beta
+      with:
+       node-version: 12
     -uses: borales/actions-yarn@v2.0.0
-  with: 
-  cam: install
+     with: 
+       cam: install
        
- - name: Install Surge
+   - name: Install Surge
      run: npm install --global surge
           
-       - name: deploying on surge
-            uses:surge ./build http://expensetracker-by-atta.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+   - name: deploying on surge
+     run: surge ./build http://expensetracker-by-atta.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
             
