--- a/.github/workflows/expensemain.yml
+++ b/.github/workflows/expensemain.yml
@@ -29,7 +29,7 @@ jobs:
     with: 
        cam: install
        
-        - name: Install Surge
+     - name: Installing Surge
      run: npm install --global surge
           
    - name: deploying on surge
